前台后端代码基本实现

--- a/tp5/application/admin/view/index/index.html
+++ b/tp5/application/admin/view/index/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>后台管理</title>
-    <link rel="stylesheet" href="__PUBLIC__/css/bootstrap.min.css">
-    <link rel="stylesheet" href="__PUBLIC__/tocss/main.css">
+    <link rel="stylesheet" href="__COMMON__/css/bootstrap.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/main.css">
     <style>
         /* 右侧主内容样式*/
 
@@ -241,14 +241,11 @@
         </div>
     </div>
     <!--页面内容结束-->
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
-    <script src="__PUBLIC__/js/bootstrap.min.js"></script>
+    <script src="__COMMON__/js/jquery.min.js"></script>
+    <script src="__COMMON__/js/bootstrap.min.js"></script>
+    <script src="__PUBLIC__/js/main.js"></script>
     <script>
-        $(function () {
-            $('#ulNav>li').click(function () { //导航列表展开效果
-                $(this).toggleClass('active-liNav');
-            })
-        })
+
     </script>
 </body>
 
