--- a/tp5/application/admin/view/links/edit.html
+++ b/tp5/application/admin/view/links/edit.html
@@ -75,12 +75,9 @@
 </div>
 <script src="__PUBLIC__/js/jquery.min.js"></script>
 <script src="__PUBLIC__/js/bootstrap.min.js"></script>
+<script src="__PUBLIC__/js/main.js"></script>
 <script>
-    $(function () {
-        $('#ulNav>li').click(function () {
-            $(this).toggleClass('active-liNav');
-        })
-    })
+
 </script>
 </body>
 
