--- a/tp5/application/admin/view/post/add.html
+++ b/tp5/application/admin/view/post/add.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>添加博文</title>
-    <link rel="stylesheet" href="__PUBLIC__/css/bootstrap.min.css">
-    <link rel="stylesheet" href="__PUBLIC__/tocss/main.css">
+    <link rel="stylesheet" href="__COMMON__/css/bootstrap.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/main.css">
     <style>
 
     </style>
@@ -109,17 +109,11 @@
             <!--右侧主内容结束-->
         </div>
     </div>
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
-    <script src="__PUBLIC__/js/bootstrap.min.js"></script>
+    <script src="__COMMON__/js/jquery.min.js"></script>
+    <script src="__COMMON__/js/bootstrap.min.js"></script>
+    <script src="__PUBLIC__/js/main.js"></script>
     <script>
-        $(function () {
-            $('#ulNav>li').click(function () {
-                $(this).toggleClass('active-liNav');
-            })
-         /*   $("#switch-checkbox").click(function () {
-                alert($(this).prop("checked"));        //prop判断是否选择
-            })*/
-        })
+
     </script>
 </body>
 
