--- a/tp5/application/index/view/login/login.html
+++ b/tp5/application/index/view/login/login.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>登录注册</title>
-    <link rel="stylesheet" href="__PUBLIC__/css/bootstrap.min.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="__COMMON__/css/bootstrap.min.css">
+    <link rel="stylesheet" href="__COMMON__/css/bootstrap-theme.min.css">
     <style>
         .blur{
-            background: url("__PUBLIC__/img/loginbg.jpg");
+            background: url('__PUBLIC__/img/loginbg.jpg');
 /*             -webkit-filter: blur(15px);
             -moz-filter: blur(15px);
             -o-filter: blur(15px);
@@ -149,8 +149,8 @@
         <div class="col-md-3 column">
         </div>
     </div>
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
-    <script src="__PUBLIC__/js/bootstrap.min.js"></script>
+    <script src="__COMMON__/js/jquery.min.js"></script>
+    <script src="__COMMON__/js/bootstrap.min.js"></script>
     <script>
         $(function () {
 
