--- a/tp5/application/index/view/publish/publish.html
+++ b/tp5/application/index/view/publish/publish.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>发表博文</title>
-    <link rel="stylesheet" href="__PUBLIC__/css/bootstrap.min.css">
-    <link rel="stylesheet" href="__PUBLIC__/maincss/main.css">
-    <link rel="stylesheet" href="__PUBLIC__/maincss/userblock.css">
+    <link rel="stylesheet" href="__COMMON__/css/bootstrap.min.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/main.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/userblock.css">
     <!--直接用用户中心样式-->
     <style>
         .write-title {
@@ -75,9 +75,9 @@
         <p>TOP</p>
     </div>
 
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
-    <script src="__PUBLIC__/js/bootstrap.min.js"></script>
-    <script src="__PUBLIC__/mainjs/totop.js"></script>
+    <script src="__COMMON__/js/jquery.min.js"></script>
+    <script src="__COMMON__/js/bootstrap.min.js"></script>
+    <script src="__PUBLIC__/js/main.js"></script>
     <script>
     </script>
 </body>
